email verification updated

--- a/api/.env
+++ b/api/.env
@@ -1,3 +1,5 @@
 MONGO = "mongodb+srv://jseo0917:Rz352HNjT1wW5Zua@cluster0.uxuoqko.mongodb.net/?retryWrites=true&w=majority"
 CLIENT_URL="http://localhost:3000"
 JWT_SECRET="abccc12312983adjfioawjewef3029jf"
+EMAIL_USER="lejhn9127@gmail.com"
+EMAIL_PASS="idpd nlpc avjw kkao"
